--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
 
         <activity android:name=".NewContactForm" />
         <activity android:name=".SearchContacts"/>
+        <activity android:name=".Contact"></activity>
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
